// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SourceWizardSummary component should render correctly amazon - ARN 1`] = `
<Component>
  <div
    className="pf-c-content"
  >
    <Component
      component="dl"
    >
      <dl
        className=""
        data-pf-content={true}
      >
        <Component
          component="dt"
        >
          <dt
            className=""
            data-pf-content={true}
          >
            Name
          </dt>
        </Component>
        <Component
          component="dd"
        >
          <dd
            className=""
            data-pf-content={true}
          >
            openshift
          </dd>
        </Component>
        <Component
          component="dt"
        >
          <dt
            className=""
            data-pf-content={true}
          >
            Application
          </dt>
        </Component>
        <Component
          component="dd"
        >
          <dd
            className=""
            data-pf-content={true}
          >
            Not selected
          </dd>
        </Component>
        <Component
          component="dt"
        >
          <dt
            className=""
            data-pf-content={true}
          >
            Source type
          </dt>
        </Component>
        <Component
          component="dd"
        >
          <dd
            className=""
            data-pf-content={true}
          >
            Amazon Web Services
          </dd>
        </Component>
        <Component
          component="dt"
        >
          <dt
            className=""
            data-pf-content={true}
          >
            Authentication type
          </dt>
        </Component>
        <Component
          component="dd"
        >
          <dd
            className=""
            data-pf-content={true}
          >
            ARN
          </dd>
        </Component>
        <Component
          component="dt"
        >
          <dt
            className=""
            data-pf-content={true}
          >
            S3 bucket name
          </dt>
        </Component>
        <Component
          component="dd"
        >
          <dd
            className=""
            data-pf-content={true}
          >
            -
          </dd>
        </Component>
        <Component
          component="dt"
        >
          <dt
            className=""
            data-pf-content={true}
          >
            ARN
          </dt>
        </Component>
        <Component
          component="dd"
        >
          <dd
            className=""
            data-pf-content={true}
          >
            123456
          </dd>
        </Component>
      </dl>
    </Component>
  </div>
</Component>
`;

exports[`SourceWizardSummary component should render correctly amazon - ARN cost management - include appended field from DB 1`] = `
<Component>
  <div
    className="pf-c-content"
  >
    <Component
      component="dl"
    >
      <dl
        className=""
        data-pf-content={true}
      >
        <Component
          component="dt"
        >
          <dt
            className=""
            data-pf-content={true}
          >
            Name
          </dt>
        </Component>
        <Component
          component="dd"
        >
          <dd
            className=""
            data-pf-content={true}
          >
            cosi
          </dd>
        </Component>
        <Component
          component="dt"
        >
          <dt
            className=""
            data-pf-content={true}
          >
            Application
          </dt>
        </Component>
        <Component
          component="dd"
        >
          <dd
            className=""
            data-pf-content={true}
          >
            Cost Management
          </dd>
        </Component>
        <Component
          component="dt"
        >
          <dt
            className=""
            data-pf-content={true}
          >
            Source type
          </dt>
        </Component>
        <Component
          component="dd"
        >
          <dd
            className=""
            data-pf-content={true}
          >
            Amazon Web Services
          </dd>
        </Component>
        <Component
          component="dt"
        >
          <dt
            className=""
            data-pf-content={true}
          >
            Authentication type
          </dt>
        </Component>
        <Component
          component="dd"
        >
          <dd
            className=""
            data-pf-content={true}
          >
            ARN
          </dd>
        </Component>
        <Component
          component="dt"
        >
          <dt
            className=""
            data-pf-content={true}
          >
            <FormattedMessage
              defaultMessage="S3 bucket name"
              id="cost.arn.s3Label"
            >
              S3 bucket name
            </FormattedMessage>
          </dt>
        </Component>
        <Component
          component="dd"
        >
          <dd
            className=""
            data-pf-content={true}
          >
            gfghf
          </dd>
        </Component>
        <Component
          component="dt"
        >
          <dt
            className=""
            data-pf-content={true}
          >
            ARN
          </dt>
        </Component>
        <Component
          component="dd"
        >
          <dd
            className=""
            data-pf-content={true}
          >
            arn:aws:132
          </dd>
        </Component>
      </dl>
    </Component>
  </div>
</Component>
`;

exports[`SourceWizardSummary component should render correctly amazon 1`] = `
<Component>
  <div
    className="pf-c-content"
  >
    <Component
      component="dl"
    >
      <dl
        className=""
        data-pf-content={true}
      >
        <Component
          component="dt"
        >
          <dt
            className=""
            data-pf-content={true}
          >
            Name
          </dt>
        </Component>
        <Component
          component="dd"
        >
          <dd
            className=""
            data-pf-content={true}
          >
            openshift
          </dd>
        </Component>
        <Component
          component="dt"
        >
          <dt
            className=""
            data-pf-content={true}
          >
            Application
          </dt>
        </Component>
        <Component
          component="dd"
        >
          <dd
            className=""
            data-pf-content={true}
          >
            Not selected
          </dd>
        </Component>
        <Component
          component="dt"
        >
          <dt
            className=""
            data-pf-content={true}
          >
            Source type
          </dt>
        </Component>
        <Component
          component="dd"
        >
          <dd
            className=""
            data-pf-content={true}
          >
            Amazon Web Services
          </dd>
        </Component>
        <Component
          component="dt"
        >
          <dt
            className=""
            data-pf-content={true}
          >
            Authentication type
          </dt>
        </Component>
        <Component
          component="dd"
        >
          <dd
            className=""
            data-pf-content={true}
          >
            AWS Secret Key
          </dd>
        </Component>
        <Component
          component="dt"
        >
          <dt
            className=""
            data-pf-content={true}
          >
            <FormattedMessage
              defaultMessage="Access key ID"
              id="wizard.accessKeyId"
            >
              Access key ID
            </FormattedMessage>
          </dt>
        </Component>
        <Component
          component="dd"
        >
          <dd
            className=""
            data-pf-content={true}
          >
            user_name
          </dd>
        </Component>
        <Component
          component="dt"
        >
          <dt
            className=""
            data-pf-content={true}
          >
            <FormattedMessage
              defaultMessage="Secret access key"
              id="wizard.secretAccessKey"
            >
              Secret access key
            </FormattedMessage>
          </dt>
        </Component>
        <Component
          component="dd"
        >
          <dd
            className=""
            data-pf-content={true}
          >
            ●●●●●●●●●●●●
          </dd>
        </Component>
      </dl>
    </Component>
  </div>
</Component>
`;

exports[`SourceWizardSummary component should render correctly ansible-tower 1`] = `
<Component>
  <div
    className="pf-c-content"
  >
    <Component
      component="dl"
    >
      <dl
        className=""
        data-pf-content={true}
      >
        <Component
          component="dt"
        >
          <dt
            className=""
            data-pf-content={true}
          >
            Name
          </dt>
        </Component>
        <Component
          component="dd"
        >
          <dd
            className=""
            data-pf-content={true}
          >
            openshift
          </dd>
        </Component>
        <Component
          component="dt"
        >
          <dt
            className=""
            data-pf-content={true}
          >
            Application
          </dt>
        </Component>
        <Component
          component="dd"
        >
          <dd
            className=""
            data-pf-content={true}
          >
            Not selected
          </dd>
        </Component>
        <Component
          component="dt"
        >
          <dt
            className=""
            data-pf-content={true}
          >
            Source type
          </dt>
        </Component>
        <Component
          component="dd"
        >
          <dd
            className=""
            data-pf-content={true}
          >
            Ansible Tower
          </dd>
        </Component>
        <Component
          component="dt"
        >
          <dt
            className=""
            data-pf-content={true}
          >
            Authentication type
          </dt>
        </Component>
        <Component
          component="dd"
        >
          <dd
            className=""
            data-pf-content={true}
          >
            Username and password
          </dd>
        </Component>
        <Component
          component="dt"
        >
          <dt
            className=""
            data-pf-content={true}
          >
            User name
          </dt>
        </Component>
        <Component
          component="dd"
        >
          <dd
            className=""
            data-pf-content={true}
          >
            user_name
          </dd>
        </Component>
        <Component
          component="dt"
        >
          <dt
            className=""
            data-pf-content={true}
          >
            Secret Key
          </dt>
        </Component>
        <Component
          component="dd"
        >
          <dd
            className=""
            data-pf-content={true}
          >
            ●●●●●●●●●●●●
          </dd>
        </Component>
        <Component
          component="dt"
        >
          <dt
            className=""
            data-pf-content={true}
          >
            <FormattedMessage
              defaultMessage="Hostname"
              id="wizard.hostname"
            >
              Hostname
            </FormattedMessage>
          </dt>
        </Component>
        <Component
          component="dd"
        >
          <dd
            className=""
            data-pf-content={true}
          >
            neznam.cz
          </dd>
        </Component>
        <Component
          component="dt"
        >
          <dt
            className=""
            data-pf-content={true}
          >
            Verify SSL
          </dt>
        </Component>
        <Component
          component="dd"
        >
          <dd
            className=""
            data-pf-content={true}
          >
            <FormattedMessage
              defaultMessage="Yes"
              id="wizard.yes"
            >
              Yes
            </FormattedMessage>
          </dd>
        </Component>
        <Component
          component="dt"
        >
          <dt
            className=""
            data-pf-content={true}
          >
            <FormattedMessage
              defaultMessage="Certificate authority"
              id="wizard.certificateAuthority"
            >
              Certificate authority
            </FormattedMessage>
          </dt>
        </Component>
        <Component
          component="dd"
        >
          <dd
            className=""
            data-pf-content={true}
          >
            authority
          </dd>
        </Component>
      </dl>
    </Component>
  </div>
</Component>
`;

exports[`SourceWizardSummary component should render correctly hide application 1`] = `
<Component>
  <div
    className="pf-c-content"
  >
    <Component
      component="dl"
    >
      <dl
        className=""
        data-pf-content={true}
      >
        <Component
          component="dt"
        >
          <dt
            className=""
            data-pf-content={true}
          >
            Name
          </dt>
        </Component>
        <Component
          component="dd"
        >
          <dd
            className=""
            data-pf-content={true}
          >
            openshift
          </dd>
        </Component>
        <Component
          component="dt"
        >
          <dt
            className=""
            data-pf-content={true}
          >
            Source type
          </dt>
        </Component>
        <Component
          component="dd"
        >
          <dd
            className=""
            data-pf-content={true}
          >
            Ansible Tower
          </dd>
        </Component>
        <Component
          component="dt"
        >
          <dt
            className=""
            data-pf-content={true}
          >
            Authentication type
          </dt>
        </Component>
        <Component
          component="dd"
        >
          <dd
            className=""
            data-pf-content={true}
          >
            Username and password
          </dd>
        </Component>
        <Component
          component="dt"
        >
          <dt
            className=""
            data-pf-content={true}
          >
            <FormattedMessage
              defaultMessage="Hostname"
              id="wizard.hostname"
            >
              Hostname
            </FormattedMessage>
          </dt>
        </Component>
        <Component
          component="dd"
        >
          <dd
            className=""
            data-pf-content={true}
          >
            neznam.cz
          </dd>
        </Component>
        <Component
          component="dt"
        >
          <dt
            className=""
            data-pf-content={true}
          >
            <FormattedMessage
              defaultMessage="Verify SSL"
              id="wizard.verifySsl"
            >
              Verify SSL
            </FormattedMessage>
          </dt>
        </Component>
        <Component
          component="dd"
        >
          <dd
            className=""
            data-pf-content={true}
          >
            <FormattedMessage
              defaultMessage="Yes"
              id="wizard.yes"
            >
              Yes
            </FormattedMessage>
          </dd>
        </Component>
        <Component
          component="dt"
        >
          <dt
            className=""
            data-pf-content={true}
          >
            <FormattedMessage
              defaultMessage="Certificate authority"
              id="wizard.certificateAuthoriy"
            >
              Certificate authority
            </FormattedMessage>
          </dt>
        </Component>
        <Component
          component="dd"
        >
          <dd
            className=""
            data-pf-content={true}
          >
            authority
          </dd>
        </Component>
        <Component
          component="dt"
        >
          <dt
            className=""
            data-pf-content={true}
          >
            <FormattedMessage
              defaultMessage="Username"
              id="wizard.username"
            >
              Username
            </FormattedMessage>
          </dt>
        </Component>
        <Component
          component="dd"
        >
          <dd
            className=""
            data-pf-content={true}
          >
            user_name
          </dd>
        </Component>
        <Component
          component="dt"
        >
          <dt
            className=""
            data-pf-content={true}
          >
            <FormattedMessage
              defaultMessage="Password"
              id="wizard.password"
            >
              Password
            </FormattedMessage>
          </dt>
        </Component>
        <Component
          component="dd"
        >
          <dd
            className=""
            data-pf-content={true}
          >
            ●●●●●●●●●●●●
          </dd>
        </Component>
      </dl>
    </Component>
  </div>
</Component>
`;

exports[`SourceWizardSummary component should render correctly openshift 1`] = `
<Component>
  <div
    className="pf-c-content"
  >
    <Component
      component="dl"
    >
      <dl
        className=""
        data-pf-content={true}
      >
        <Component
          component="dt"
        >
          <dt
            className=""
            data-pf-content={true}
          >
            Name
          </dt>
        </Component>
        <Component
          component="dd"
        >
          <dd
            className=""
            data-pf-content={true}
          >
            openshift
          </dd>
        </Component>
        <Component
          component="dt"
        >
          <dt
            className=""
            data-pf-content={true}
          >
            Application
          </dt>
        </Component>
        <Component
          component="dd"
        >
          <dd
            className=""
            data-pf-content={true}
          >
            Not selected
          </dd>
        </Component>
        <Component
          component="dt"
        >
          <dt
            className=""
            data-pf-content={true}
          >
            Source type
          </dt>
        </Component>
        <Component
          component="dd"
        >
          <dd
            className=""
            data-pf-content={true}
          >
            OpenShift Container Platform
          </dd>
        </Component>
        <Component
          component="dt"
        >
          <dt
            className=""
            data-pf-content={true}
          >
            Authentication type
          </dt>
        </Component>
        <Component
          component="dd"
        >
          <dd
            className=""
            data-pf-content={true}
          >
            Token
          </dd>
        </Component>
        <Component
          component="dt"
        >
          <dt
            className=""
            data-pf-content={true}
          >
            Token
          </dt>
        </Component>
        <Component
          component="dd"
        >
          <dd
            className=""
            data-pf-content={true}
          >
            ●●●●●●●●●●●●
          </dd>
        </Component>
        <Component
          component="dt"
        >
          <dt
            className=""
            data-pf-content={true}
          >
            URL
          </dt>
        </Component>
        <Component
          component="dd"
        >
          <dd
            className=""
            data-pf-content={true}
          >
            neznam.cz
          </dd>
        </Component>
        <Component
          component="dt"
        >
          <dt
            className=""
            data-pf-content={true}
          >
            Verify SSL
          </dt>
        </Component>
        <Component
          component="dd"
        >
          <dd
            className=""
            data-pf-content={true}
          >
            <FormattedMessage
              defaultMessage="Yes"
              id="wizard.yes"
            >
              Yes
            </FormattedMessage>
          </dd>
        </Component>
        <Component
          component="dt"
        >
          <dt
            className=""
            data-pf-content={true}
          >
            SSL Certificate
          </dt>
        </Component>
        <Component
          component="dd"
        >
          <dd
            className=""
            data-pf-content={true}
          >
            authority
          </dd>
        </Component>
      </dl>
    </Component>
  </div>
</Component>
`;

exports[`SourceWizardSummary component should render correctly openshift cost management - include appended field from DB 1`] = `
<Component>
  <div
    className="pf-c-content"
  >
    <Component
      component="dl"
    >
      <dl
        className=""
        data-pf-content={true}
      >
        <Component
          component="dt"
        >
          <dt
            className=""
            data-pf-content={true}
          >
            Name
          </dt>
        </Component>
        <Component
          component="dd"
        >
          <dd
            className=""
            data-pf-content={true}
          >
            cosi
          </dd>
        </Component>
        <Component
          component="dt"
        >
          <dt
            className=""
            data-pf-content={true}
          >
            Application
          </dt>
        </Component>
        <Component
          component="dd"
        >
          <dd
            className=""
            data-pf-content={true}
          >
            Cost Management
          </dd>
        </Component>
        <Component
          component="dt"
        >
          <dt
            className=""
            data-pf-content={true}
          >
            Source type
          </dt>
        </Component>
        <Component
          component="dd"
        >
          <dd
            className=""
            data-pf-content={true}
          >
            OpenShift Container Platform
          </dd>
        </Component>
        <Component
          component="dt"
        >
          <dt
            className=""
            data-pf-content={true}
          >
            <FormattedMessage
              defaultMessage="Cluster Identifier"
              id="wizard.clusterId"
            >
              Cluster Identifier
            </FormattedMessage>
          </dt>
        </Component>
        <Component
          component="dd"
        >
          <dd
            className=""
            data-pf-content={true}
          >
            CLUSTER ID123
          </dd>
        </Component>
      </dl>
    </Component>
  </div>
</Component>
`;

exports[`SourceWizardSummary component should render correctly selected Catalog application, is second 1`] = `
<Component>
  <div
    className="pf-c-content"
  >
    <Component
      component="dl"
    >
      <dl
        className=""
        data-pf-content={true}
      >
        <Component
          component="dt"
        >
          <dt
            className=""
            data-pf-content={true}
          >
            Name
          </dt>
        </Component>
        <Component
          component="dd"
        >
          <dd
            className=""
            data-pf-content={true}
          >
            openshift
          </dd>
        </Component>
        <Component
          component="dt"
        >
          <dt
            className=""
            data-pf-content={true}
          >
            Application
          </dt>
        </Component>
        <Component
          component="dd"
        >
          <dd
            className=""
            data-pf-content={true}
          >
            Catalog
          </dd>
        </Component>
        <Component
          component="dt"
        >
          <dt
            className=""
            data-pf-content={true}
          >
            Source type
          </dt>
        </Component>
        <Component
          component="dd"
        >
          <dd
            className=""
            data-pf-content={true}
          >
            Ansible Tower
          </dd>
        </Component>
        <Component
          component="dt"
        >
          <dt
            className=""
            data-pf-content={true}
          >
            Authentication type
          </dt>
        </Component>
        <Component
          component="dd"
        >
          <dd
            className=""
            data-pf-content={true}
          >
            Username and password
          </dd>
        </Component>
        <Component
          component="dt"
        >
          <dt
            className=""
            data-pf-content={true}
          >
            <FormattedMessage
              defaultMessage="Hostname"
              id="wizard.hostname"
            >
              Hostname
            </FormattedMessage>
          </dt>
        </Component>
        <Component
          component="dd"
        >
          <dd
            className=""
            data-pf-content={true}
          >
            neznam.cz
          </dd>
        </Component>
        <Component
          component="dt"
        >
          <dt
            className=""
            data-pf-content={true}
          >
            <FormattedMessage
              defaultMessage="Verify SSL"
              id="wizard.verifySsl"
            >
              Verify SSL
            </FormattedMessage>
          </dt>
        </Component>
        <Component
          component="dd"
        >
          <dd
            className=""
            data-pf-content={true}
          >
            <FormattedMessage
              defaultMessage="Yes"
              id="wizard.yes"
            >
              Yes
            </FormattedMessage>
          </dd>
        </Component>
        <Component
          component="dt"
        >
          <dt
            className=""
            data-pf-content={true}
          >
            <FormattedMessage
              defaultMessage="Certificate authority"
              id="wizard.certificateAuthoriy"
            >
              Certificate authority
            </FormattedMessage>
          </dt>
        </Component>
        <Component
          component="dd"
        >
          <dd
            className=""
            data-pf-content={true}
          >
            authority
          </dd>
        </Component>
        <Component
          component="dt"
        >
          <dt
            className=""
            data-pf-content={true}
          >
            <FormattedMessage
              defaultMessage="Username"
              id="wizard.username"
            >
              Username
            </FormattedMessage>
          </dt>
        </Component>
        <Component
          component="dd"
        >
          <dd
            className=""
            data-pf-content={true}
          >
            user_name
          </dd>
        </Component>
        <Component
          component="dt"
        >
          <dt
            className=""
            data-pf-content={true}
          >
            <FormattedMessage
              defaultMessage="Password"
              id="wizard.password"
            >
              Password
            </FormattedMessage>
          </dt>
        </Component>
        <Component
          component="dd"
        >
          <dd
            className=""
            data-pf-content={true}
          >
            ●●●●●●●●●●●●
          </dd>
        </Component>
      </dl>
    </Component>
  </div>
</Component>
`;
